<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/StatsLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_view_bonus_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_string_bonuses_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
    
	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_string_happy_bonus" />

            <TextView
                android:id="@+id/stats_happy_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+20" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_string_hunger_bonus" />

            <TextView
                android:id="@+id/stats_hunger_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+15" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_string_tired_bonus" />

            <TextView
                android:id="@+id/stats_tired_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+10" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_string_petting_bonus" />

            <TextView
                android:id="@+id/stats_petting_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+10" />

        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_view_stats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_string_stats_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
    
	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/table2Row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Items Equipped:" />

            <TextView
                android:id="@+id/stats_items_equipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/10" />

        </TableRow>

        <TableRow
            android:id="@+id/table2Row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_string_times_petted" />

            <TextView
                android:id="@+id/text_view_times_petted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5/10" />

        </TableRow>

        <TableRow
            android:id="@+id/table2Row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Achievements Earned:" />

            <TextView
                android:id="@+id/stats_ach_earned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/10" />

        </TableRow>
    </TableLayout>

	<TextView
	    android:id="@+id/text_view_"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/stats_string_achievements_title"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<ListView
	    android:id="@+id/achievements_view"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	</ListView>

</LinearLayout>